@@ -1,5 +1,10 @@
 2006-05-25  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plparse/totem-disc.c: (cd_cache_free): Disconnect from HAL
+	when we're done with the work
+
+2006-05-25  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plparse/totem-disc.c: (cd_cache_new_hal_ctx),
 	(cd_cache_has_medium): Fix build and run-time with HAL >= 0.5
 
